# FindFileWithExtensions

./: .gitignore  README.md  pyproject.toml
data/: clear_extension_list.py
source/: main.py
source/FileFinder/: __init__.py
tests/: is_extension_test.py
